// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages should compile index for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1 v1.0.0** • Readme \\| [API](packages.md)

***

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • [Readme](index.md) \\| API

***

# packages-example

## Packages

- [package-1](package-1/index.md)
- [package-2](package-2/index.md)
- [package-3](package-3/index.md)
- [package-4](package-4/index.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**package-1 v1.0.0** • [Readme](index.md) \\| API

***

[packages-example](../packages.md) / package-1

# package-1

Comments for package-1

## Interfaces

- [PackageInterface](interfaces/PackageInterface.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 3`] = `
"**package-2** • API

***

[packages-example](../packages.md) / package-2

# package-2

## Modules

- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile member page for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1 v1.0.0** • [Readme](../README.md) \\| API

***

[package-1](../packages.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1 v1.0.0** • [Readme](../index.md) \\| API

***

[packages-example](../../packages.md) / [package-1](../globals.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • Readme \\| [API](packages.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**package-1 v1.0.0** • Readme \\| [API](globals.md)

***

[packages-example](../packages.md) / package-1

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"**packages-example v0.0** • API

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## API

### Packages

- [package-1](package-1/index.md)
- [package-2](package-2/index.md)
- [package-3](package-3/index.md)
- [package-4](package-4/index.md)
"
`;
